--- a/css/style.css
+++ b/css/style.css
@@ -2364,6 +2364,9 @@ ________________________________________
     opacity: 0.6;
 }
 
+input:disabled ~ label {
+    opacity: 0.25;
+}
 
 .filter-input-checkbox:checked ~ label::after {
     content: "";
